# wyoming-faster-whisper

./: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE.md  README.md  docker-compose.cpu.yml  docker-compose.yml  docker-entrypoint.sh  docker_run.sh  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
script/: format  lint  run  setup
tests/: __init__.py  test_const.py  test_faster_whisper.py  test_faster_whisper_translate.py  test_funasr.py  test_models.py
wyoming_faster_whisper/: __init__.py  __main__.py  const.py  dispatch_handler.py  download.py  faster_whisper_handler.py  funasr_handler.py  handler.py  models.py  onnx_asr_handler.py  sherpa_handler.py  transformers_whisper.py  vad.py  whisper_handler.py
wyoming_faster_whisper/faster_whisper/: __init__.py  transcribe.py
