[project]
name = "wyoming-faster-whisper"
version = "3.1.0"
description = "Wyoming Server for Faster Whisper"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords = ["rhasspy", "wyoming", "whisper", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.8,<2",
    "faster-whisper>=1.1.0,<2",
    "requests",  # needed by faster-whisper
]

[project.urls]
Homepage = "http://github.com/rhasspy/wyoming-faster-whisper"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["wyoming_faster_whisper"]
exclude = ["tests"]

[project.scripts]
wyoming-faster-whisper = "wyoming_faster_whisper.__main__:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-asyncio",
]
transformers = [
    "transformers[torch]==4.52.4",
]
sherpa = [
    "sherpa-onnx==1.12.15",
]
onnx_asr = [
    "onnx-asr[cpu,hub]==0.7.0",
]
zeroconf = [
    "wyoming[zeroconf]",
]
